fix sizing on mobile

--- a/client/src/Styles/Landing.scss
+++ b/client/src/Styles/Landing.scss
@@ -52,6 +52,7 @@
         display: flex;
         justify-content: center;
         align-items: center;
+        z-index: 1;
         
         transition: 0.35s ease-in-out;
         a {
@@ -80,6 +81,7 @@
     justify-content: center;
     align-items: center;
     transform: translateY(-3rem);
+    width: 100%;
 
     @media screen and (max-width: 900px) {
         transform: translateY(-1rem);
