--- a/client/src/Styles/index.scss
+++ b/client/src/Styles/index.scss
@@ -5,7 +5,7 @@ body {
   overflow-x: hidden;
 
   @media screen and (max-width: 900px) {
-    width: 111vw;
+    //width: 111vw;
     
   }
   
